<resources>
    <string name="app_name">MET Gallery Browser</string>

    <string name="clear_text">Clear Text</string>

    <string name="idle_state_hint">Type in your search term.</string>
    <string name="preview_content_description">Preview: %1$s</string>

    <string name="object_title">Title</string>


</resources>