...

data class METObjectUIRepresentable(val metObject: METObject) {

    // region Types

    data class Entry(
        val name: String,
        val value: String,
        val hyperlinks: List<HyperLink> = emptyList()
    )

    // endregion

...
